--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -34,8 +34,8 @@ jobs:
 
 
     - name: Docker build
-      run: docker build -t ghcr.io/${{ github.actor }}/todo-app:${{ github.sha }} .
+      run: docker build -t ghcr.io/${{ github.actor.toLowerCase() }}/todo-app:${{ github.sha }} .
       working-directory: src/api
 
     - name: Docker push
-      run: docker push ghcr.io/${{ github.actor }}/todo-app:${{ github.sha }}
+      run: docker push ghcr.io/${{ github.actor.toLowerCase() }}/todo-app:${{ github.sha }}
