--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -32,10 +32,14 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-
     - name: Docker build
-      run: docker build -t ghcr.io/${{ github.actor.toLowerCase() }}/todo-app:${{ github.sha }} .
+      run: |
+        ACTOR=$(echo $GITHUB_ACTOR | tr '[:upper:]' '[:lower:]')
+        docker build -t ghcr.io/$ACTOR/todo-app:${GITHUB_SHA} .
       working-directory: src/api
 
     - name: Docker push
-      run: docker push ghcr.io/${{ github.actor.toLowerCase() }}/todo-app:${{ github.sha }}
+      run: |
+        ACTOR=$(echo $GITHUB_ACTOR | tr '[:upper:]' '[:lower:]')
+        docker push ghcr.io/$ACTOR/todo-app:${GITHUB_SHA}
+
