--- a/src/api/pom.xml
+++ b/src/api/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
   		<groupId>org.springframework.boot</groupId>
  		<artifactId>spring-boot-starter-parent</artifactId>
-  		<version>2.7.18</version>
+  		<version>3.4.1</version>
 	</parent>
 
 	<groupId>com.mariadb</groupId>
@@ -15,7 +15,7 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
-		<java.version>17</java.version>
+		<java.version>25</java.version>
 	</properties>
 
 	<dependencies>
@@ -28,9 +28,9 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.mariadb.jdbc</groupId>
-			<artifactId>mariadb-java-client</artifactId>
-			<version>2.7.4</version>
+  			<groupId>com.h2database</groupId>
+  			<artifactId>h2</artifactId>
+  			<scope>runtime</scope>
 		</dependency>
 		<dependency>
   			<groupId>org.projectlombok</groupId>
