--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,11 +15,21 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    - name: Setup Java
+    - name: Setup Java 25
       uses: actions/setup-java@v4
       with:
         java-version: '25'
         distribution: 'temurin'
+        cache: maven
+
+    - name: Check Java version
+      run: |
+        echo "JAVA_HOME=$JAVA_HOME"
+        java -version
+        javac -version
+
+    - name: Check Maven Version
+      run: mvn -version
 
     - name: Maven build
       run: mvn clean package -DskipTests
