--- a/src/api/pom.xml
+++ b/src/api/pom.xml
@@ -48,11 +48,22 @@
 	<build>
   		<plugins>
     			<plugin>
-      				<groupId>org.springframework.boot</groupId>
-      				<artifactId>spring-boot-maven-plugin</artifactId>
-    			</plugin>
+  				<groupId>org.springframework.boot</groupId>
+  				<artifactId>spring-boot-maven-plugin</artifactId>
+  				<executions>
+    					<execution>
+      						<goals>
+        						<goal>repackage</goal>
+      						</goals>
+      						<configuration>
+        						<skip>true</skip>
+      						</configuration>
+    					</execution>
+  				</executions>
+			</plugin>
   		</plugins>
 	</build>
 
 
 </project>
+	
