--- a/src/api/dockerfile
+++ b/src/api/dockerfile
@@ -1,11 +1,15 @@
-FROM maven:3.9.9-eclipse-temurin-25 AS build
+FROM eclipse-temurin:25-jdk-jammy AS build
 WORKDIR /app
+RUN apt-get update \
+ && apt-get install -y maven \
+ && rim -rf /var/lib/apt/lists/*
+
 COPY pom.xml .
 RUN mvn dependency:go-offline
 COPY src ./src
-RUN mvn clean package -DskipTests
+RUN mvn -U clean package -DskipTests
 
-FROM eclipse-temurin:25-jre-alpine
+FROM eclipse-temurin:25-jre-jammy
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8080
