--- a/src/api/dockerfile
+++ b/src/api/dockerfile
@@ -2,7 +2,7 @@ FROM eclipse-temurin:25-jdk-jammy AS build
 WORKDIR /app
 RUN apt-get update \
  && apt-get install -y maven \
- && rim -rf /var/lib/apt/lists/*
+ && rm -rf /var/lib/apt/lists/*
 
 COPY pom.xml .
 RUN mvn dependency:go-offline
